--- a/LAB4/LAB4.ipynb
+++ b/LAB4/LAB4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,11 +129,14 @@
     "    global n_change, change\n",
     "\n",
     "    for i in range(1, amount + 1):\n",
+    "        print(f\"Try to make change for {i}\")\n",
     "        for coin in coins:\n",
     "            if i == coin:\n",
+    "                print(f\"use {coin}\")\n",
     "                n_change[i] = 1\n",
     "                change[i] = [coin]\n",
     "            elif i > coin:\n",
+    "                print(f\"use {coin} and find {i - coin} change {change[i - coin]}\")\n",
     "                if n_change[i - coin] + 1 < n_change[i]:\n",
     "                    n_change[i] = n_change[i - coin] + 1\n",
     "                    change[i] = change[i - coin] + [coin]\n",
@@ -143,13 +146,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Try to make change for 1\n",
+      "Try to make change for 2\n",
+      "use 2\n",
+      "Try to make change for 3\n",
+      "use 2 and find 1 change []\n",
+      "use 3\n",
+      "Try to make change for 4\n",
+      "use 2 and find 2 change [2]\n",
+      "use 3 and find 1 change []\n",
+      "Try to make change for 5\n",
+      "use 2 and find 3 change [3]\n",
+      "use 3 and find 2 change [2]\n",
+      "Try to make change for 6\n",
+      "use 2 and find 4 change [2, 2]\n",
+      "use 3 and find 3 change [3]\n",
+      "Try to make change for 7\n",
+      "use 2 and find 5 change [3, 2]\n",
+      "use 3 and find 4 change [2, 2]\n",
+      "Try to make change for 8\n",
+      "use 2 and find 6 change [3, 3]\n",
+      "use 3 and find 5 change [3, 2]\n",
+      "Try to make change for 9\n",
+      "use 2 and find 7 change [3, 2, 2]\n",
+      "use 3 and find 6 change [3, 3]\n",
+      "use 9\n",
+      "Try to make change for 10\n",
+      "use 2 and find 8 change [3, 3, 2]\n",
+      "use 3 and find 7 change [3, 2, 2]\n",
+      "use 9 and find 1 change []\n",
       "Minimum number of coins to make change for 10 is 4 coins: [3, 3, 2, 2]\n",
       "Dynamic Programming Table:\n",
       "n_change: [0, inf, 1, 1, 2, 2, 2, 3, 3, 1, 4]\n",
@@ -180,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +227,6 @@
     "\n",
     "    # memoization\n",
     "    if (n_change[amount] != float(\"inf\")):\n",
-    "        # print(\"Memoization\")\n",
     "        return n_change[amount], change[amount]\n",
     "\n",
     "    # base case\n",
@@ -206,19 +237,20 @@
     "\n",
     "    # recursive case\n",
     "    for coin in coins:\n",
-    "        if amount > coin:\n",
+    "        if amount >= coin:\n",
     "            current_n_change, current_change = top_down_min_change(amount - coin)\n",
+    "            current_n_coin, current_coin = top_down_min_change(coin)\n",
     "\n",
     "            if current_n_change + 1 < n_change[amount]:\n",
-    "                n_change[amount] = current_n_change + 1\n",
-    "                change[amount] = current_change + [coin]\n",
+    "                n_change[amount] = current_n_change + current_n_coin\n",
+    "                change[amount] = current_change + current_coin\n",
     "\n",
     "    return n_change[amount], change[amount]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +259,8 @@
      "text": [
       "Minimum number of coins to make change for 10 is 4 coins: [3, 3, 2, 2]\n",
       "Dynamic Programming Table:\n",
-      "n_change: [0, inf, 1, 1, 2, 2, 2, 3, 3, inf, 4]\n",
-      "change: [[], [], [2], [3], [2, 2], [3, 2], [3, 3], [3, 2, 2], [3, 3, 2], [], [3, 3, 2, 2]]\n"
+      "n_change: [0, inf, 1, 1, 2, 2, 2, 3, 3, 1, 4]\n",
+      "change: [[], [], [2], [3], [2, 2], [3, 2], [3, 3], [3, 2, 2], [3, 3, 2], [9], [3, 3, 2, 2]]\n"
      ]
     }
    ],
@@ -249,41 +281,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File: ./test/4.2.txt\n",
-      "Minimum number of coins to make change for 48 is 4 coins: [14, 14, 14, 6]\n",
-      "File: ./test/4.13.txt\n",
-      "Minimum number of coins to make change for 522 is 6 coins: [90, 90, 90, 90, 90, 72]\n",
-      "File: ./test/4.12.txt\n",
-      "Minimum number of coins to make change for 312 is 8 coins: [43, 43, 43, 43, 43, 43, 43, 11]\n",
-      "File: ./test/4.3.txt\n",
-      "Minimum number of coins to make change for 28 is 4 coins: [7, 7, 7, 7]\n",
-      "File: ./test/4.1.txt\n",
-      "Minimum number of coins to make change for 12 is 2 coins: [10, 2]\n",
-      "File: ./test/4.10.txt\n",
-      "Minimum number of coins to make change for 49 is inf coins: []\n",
-      "File: ./test/4.11.txt\n",
-      "Minimum number of coins to make change for 149 is 9 coins: [17, 17, 17, 17, 17, 17, 17, 17, 13]\n",
-      "File: ./test/4.4.txt\n",
-      "Minimum number of coins to make change for 25 is 3 coins: [9, 9, 7]\n",
-      "File: ./test/4.5.txt\n",
-      "Minimum number of coins to make change for 31 is inf coins: []\n",
-      "File: ./test/4.7.txt\n",
-      "Minimum number of coins to make change for 30 is 3 coins: [12, 9, 9]\n",
-      "File: ./test/4.6.txt\n",
-      "Minimum number of coins to make change for 22 is 3 coins: [8, 7, 7]\n",
-      "File: ./test/4.14(Extra).txt\n",
-      "Minimum number of coins to make change for 9036 is 2 coins: [4517, 4519]\n",
-      "File: ./test/4.8.txt\n",
-      "Minimum number of coins to make change for 48 is 3 coins: [36, 7, 5]\n",
-      "File: ./test/4.9.txt\n",
-      "Minimum number of coins to make change for 56 is 6 coins: [11, 11, 11, 11, 7, 5]\n"
+      "File ./test/4.2.txt\n",
+      "Amount 48\n",
+      "coins [] = [4, 6, 14]\n",
+      "Minimum of Coin is 4\n",
+      "[14, 14, 14, 6]\n",
+      "\n",
+      "File ./test/4.13.txt\n",
+      "Amount 522\n",
+      "coins [] = [10, 21, 32, 43, 54, 65, 72, 81, 90]\n",
+      "Minimum of Coin is 6\n",
+      "[90, 90, 90, 90, 90, 72]\n",
+      "\n",
+      "File ./test/4.12.txt\n",
+      "Amount 312\n",
+      "coins [] = [7, 9, 11, 20, 30, 31, 43]\n",
+      "Minimum of Coin is 8\n",
+      "[43, 43, 43, 43, 43, 43, 43, 11]\n",
+      "\n",
+      "File ./test/4.3.txt\n",
+      "Amount 28\n",
+      "coins [] = [2, 5, 7]\n",
+      "Minimum of Coin is 4\n",
+      "[7, 7, 7, 7]\n",
+      "\n",
+      "File ./test/4.1.txt\n",
+      "Amount 12\n",
+      "coins [] = [2, 6, 7, 10]\n",
+      "Minimum of Coin is 2\n",
+      "[10, 2]\n",
+      "\n",
+      "File ./test/4.10.txt\n",
+      "Amount 49\n",
+      "coins [] = [2, 4, 6, 14, 32]\n",
+      "Minimum of Coin is inf\n",
+      "[]\n",
+      "\n",
+      "File ./test/4.11.txt\n",
+      "Amount 149\n",
+      "coins [] = [5, 7, 11, 13, 17]\n",
+      "Minimum of Coin is 9\n",
+      "[17, 17, 17, 17, 17, 17, 17, 17, 13]\n",
+      "\n",
+      "File ./test/4.4.txt\n",
+      "Amount 25\n",
+      "coins [] = [3, 5, 7, 9]\n",
+      "Minimum of Coin is 3\n",
+      "[9, 9, 7]\n",
+      "\n",
+      "File ./test/4.5.txt\n",
+      "Amount 31\n",
+      "coins [] = [2, 6, 10, 14]\n",
+      "Minimum of Coin is inf\n",
+      "[]\n",
+      "\n",
+      "File ./test/4.7.txt\n",
+      "Amount 30\n",
+      "coins [] = [3, 5, 9, 10, 11, 12]\n",
+      "Minimum of Coin is 3\n",
+      "[12, 9, 9]\n",
+      "\n",
+      "File ./test/4.6.txt\n",
+      "Amount 22\n",
+      "coins [] = [7, 8, 9]\n",
+      "Minimum of Coin is 3\n",
+      "[8, 7, 7]\n",
+      "\n",
+      "File ./test/4.14(Extra).txt\n",
+      "Amount 9036\n",
+      "coins [] = [3, 5, 11, 17, 29, 41, 59, 71, 101, 107, 137, 149, 179, 191, 197, 227, 239, 269, 281, 311, 347, 419, 431, 461, 521, 569, 599, 617, 641, 659, 809, 821, 827, 857, 881, 1019, 1031, 1049, 1061, 1091, 1151, 1229, 1277, 1289, 1301, 1319, 1427, 1451, 1481, 1487, 1607, 1619, 1667, 1697, 1721, 1787, 1871, 1877, 1931, 1949, 1997, 2027, 2081, 2087, 2111, 2129, 2141, 2237, 2267, 2309, 2339, 2381, 2549, 2591, 2657, 2687, 2711, 2729, 2789, 2801, 2969, 2999, 3119, 3167, 3251, 3257, 3299, 3329, 3359, 3371, 3389, 3461, 3467, 3527, 3539, 3557, 3581, 3671, 3767, 3821, 3851, 3917, 3929, 4001, 4019, 4049, 4091, 4127, 4157, 4217, 4519, 4229, 4241, 4259, 4271, 4337, 4421, 4481, 4517, 4547, 4637, 4649, 4721, 4787, 4799, 4931, 4967, 5009, 5021, 5099, 5231, 5279, 5417, 5441, 5477, 5501, 5519, 5639, 5651, 5657, 5741, 5867, 5879, 6089, 6131, 6197, 6269, 6299, 6359, 6449, 6551, 6569, 6659, 6689, 6701, 6761, 6779, 6791, 6827, 6869, 6947, 6959, 7127, 7211, 7307, 7331, 7349, 7457]\n",
+      "Minimum of Coin is 2\n",
+      "[4517, 4519]\n",
+      "\n",
+      "File ./test/4.8.txt\n",
+      "Amount 48\n",
+      "coins [] = [4, 5, 7, 16, 36]\n",
+      "Minimum of Coin is 3\n",
+      "[36, 7, 5]\n",
+      "\n",
+      "File ./test/4.9.txt\n",
+      "Amount 56\n",
+      "coins [] = [3, 5, 7, 11]\n",
+      "Minimum of Coin is 6\n",
+      "[11, 11, 11, 11, 7, 5]\n",
+      "\n"
      ]
     }
    ],
@@ -299,7 +387,6 @@
     "for file in files:\n",
     "    file_path = path + \"/\" + file\n",
     "    with open(file_path, \"r\") as f:\n",
-    "        print(f\"File: {file_path}\")\n",
     "        amount = int(f.readline())\n",
     "        coins = [int(coin) for coin in f.readline().split()]\n",
     "\n",
@@ -309,16 +396,18 @@
     "        change = [[] for _ in range(amount + 1)]\n",
     "\n",
     "        solution = top_down_min_change(amount)\n",
-    "        print(\n",
-    "            f\"Minimum number of coins to make change for {amount} is {solution[0]} coins: {solution[1]}\")"
+    "        sol_n_change = solution[0]\n",
+    "        sol_change = solution[1]\n",
+    "\n",
+    "        print(f\"File {file_path}\")\n",
+    "        print(f\"Amount {amount}\")\n",
+    "        print(f\"coins [] = {coins}\")\n",
+    "        print(f\"Minimum of Coin is {sol_n_change}\")\n",
+    "        print(f\"{sol_change}\")\n",
+    "        print()\n",
+    "\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
