--- a/LAB4/LAB4_1.ipynb
+++ b/LAB4/LAB4_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def bottom_up_make_change(amount: int, coins: Vector):\n",
     "\n",
     "    if amount == 0:\n",
-    "        return None\n",
+    "        return [[]]\n",
     "\n",
     "    for i in range(coins[0], amount + 1):\n",
     "        for coin in coins:\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -103,13 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def top_down_make_change(amount: int, coins: Vector):\n",
-    "\n",
-    "    print(\"Finding combinations for\", amount)\n",
     "\n",
     "    if amount == 0:\n",
     "        return []\n",
@@ -133,23 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finding combinations for 5\n",
-      "Finding combinations for 4\n",
-      "Finding combinations for 3\n",
-      "Finding combinations for 2\n",
-      "Finding combinations for 1\n",
-      "Finding combinations for 1\n",
-      "Finding combinations for 2\n",
-      "Finding combinations for 1\n",
-      "Finding combinations for 3\n",
-      "Finding combinations for 2\n",
       "1: [[1]]\n",
       "2: [[2], [1, 1]]\n",
       "3: [[3], [2, 1], [1, 1, 1]]\n",
@@ -169,6 +157,69 @@
     "\n",
     "for i in range(1, amount + 1):\n",
     "    print(f\"{i}: {coins_table[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File: ./test/4.1.txt\n",
+      "Amount = 12\n",
+      "coins [] = [2, 6, 7, 10]\n",
+      "Ways to make change = 4\n",
+      "[[2, 2, 2, 2, 2, 2], [6, 2, 2, 2], [10, 2], [6, 6]] \n",
+      "\n",
+      "1: []\n",
+      "2: [[2]]\n",
+      "3: []\n",
+      "4: [[2, 2]]\n",
+      "5: []\n",
+      "6: [[2, 2, 2], [6]]\n",
+      "7: [[7]]\n",
+      "8: [[2, 2, 2, 2], [6, 2]]\n",
+      "9: [[7, 2]]\n",
+      "10: [[2, 2, 2, 2, 2], [6, 2, 2], [10]]\n",
+      "11: [[7, 2, 2]]\n",
+      "12: [[2, 2, 2, 2, 2, 2], [6, 2, 2, 2], [10, 2], [6, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "path = \"./test\"\n",
+    "files = os.listdir(path)\n",
+    "\n",
+    "sys.setrecursionlimit(100000)\n",
+    "\n",
+    "# for file in files:\n",
+    "#     file_path = path + \"/\" + file\n",
+    "\n",
+    "file_path = path + \"/\" + \"4.1.txt\"\n",
+    "\n",
+    "with open(file_path, \"r\") as f:\n",
+    "    print(f\"File: {file_path}\")\n",
+    "    amount = int(f.readline())\n",
+    "    coins = [int(coin) for coin in f.readline().split()]\n",
+    "\n",
+    "    for i in range(1, amount + 1):\n",
+    "        coins_table[i] = []\n",
+    "\n",
+    "    solution = bottom_up_make_change(amount, coins)\n",
+    "\n",
+    "    print(f\"Amount = {amount}\")\n",
+    "    print(f\"coins [] = {coins}\")\n",
+    "    print(f\"Ways to make change = {len(solution)}\")\n",
+    "    print(f\"{solution} \\n\")\n",
+    "\n",
+    "    for i in range(1, amount + 1):\n",
+    "        print(f\"{i}: {coins_table[i]}\")"
    ]
   }
  ],
