--- a/LAB8/archives/lab8.ipynb
+++ b/LAB8/archives/lab8.ipynb
@@ -14,34 +14,11 @@
     }
    ],
    "source": [
-    "# Define the range for the sequence\n",
-    "n = 10  # Replace with the desired value of n\n",
-    "\n",
-    "# Step 1: Generate the sequence of numbers from 0 to n\n",
-    "sequence = list(range(n + 1))\n",
-    "\n",
-    "# Step 2: Create a list to store valid (n1, n2, n3) tuples\n",
-    "valid_tuples = []\n",
-    "\n",
-    "for n1 in sequence:\n",
-    "    for n3 in sequence:\n",
-    "        n2 = (n1 + n3) / 2\n",
-    "        if n1 < n2 < n3:\n",
-    "            valid_tuples.append((n1, n2, n3))\n",
-    "\n",
-    "# Step 3: Sort the list of tuples based on n2\n",
-    "sorted_tuples = sorted(valid_tuples, key=lambda x: x[1])\n",
-    "\n",
-    "# Step 4: Create a new list with the sorted tuples\n",
-    "sorted_sequence = []\n",
-    "for n1, n2, n3 in sorted_tuples:\n",
-    "    sorted_sequence.extend([n2, n1, n3])\n",
-    "\n",
-    "# Step 5: Extract n1, n2, and n3 from the sorted tuples and create a new list\n",
-    "sorted_sequence = [n1 for n1, _, _ in sorted_tuples] + sorted_sequence\n",
-    "\n",
-    "# Display the sorted sequence\n",
-    "print(sorted_sequence)\n"
+    "def DaC(arr) -> list[int]:\n",
+    "    if len(arr) == 1:\n",
+    "        return arr[0]\n",
+    "    else:\n",
+    "        return DaC(arr[::2]) + DaC(arr[1::2])\n"
    ]
   }
  ],
